--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,21 +1,29 @@
 name: Matrix Testing
 
 on:
-  push:
   pull_request:
 
 jobs:
   test:
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     runs-on: ${{ matrix.os }}-latest
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu]
-        ruby: [2.5, 2.6, 2.7, 3.0, 3.1]
+        ruby: [2.6, 2.7, 3.0, 3.1]
     steps:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
+      - run: sudo apt-get install -y redis-tools redis-server
       - run: bundle install
       - run: bundle exec rake
